// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorText UnitTest renders correctly with children text 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "calibre_app_regular",
            "fontSize": 13,
            "marginBottom": 18,
          },
          {
            "color": "#ff4310",
          },
          undefined,
        ]
      }
    >
      Error message
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ErrorText UnitTest renders without children 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "calibre_app_regular",
            "fontSize": 13,
            "marginBottom": 18,
          },
          {
            "color": "#ff4310",
          },
          undefined,
        ]
      }
    />
  </View>
</RNCSafeAreaProvider>
`;
